# wigtn-spot-finder

./: .env.example  .gitignore  Dockerfile  Dockerfile.observer  Dockerfile.railway  Procfile  README.ko.md  README.md  docker-compose.yml  pyproject.toml  railway.toml  requirements-railway.txt  requirements.txt
apps/api/: .dockerignore  Dockerfile
apps/api/scripts/: run_scraper.py
apps/api/src/agents/: business_agent.py
apps/api/src/api/: main.py
apps/api/src/api/middleware/: __init__.py
apps/api/src/api/routes/: chat.py  health.py
apps/api/src/db/postgres/: connection.py  metadata_store.py
apps/api/src/middleware/core/: __init__.py  dynamic_prompt.py  summarization.py  trimming.py
apps/api/src/models/: popup.py  state.py
apps/api/src/scraper/: scheduler.py
apps/api/src/services/llm/: upstage_document_parser.py
apps/api/src/services/memory/: __init__.py  retrieval.py
apps/api/src/tools/instagram/: __init__.py
apps/api/src/tools/naver/: __init__.py  directions.py  (+2 more)
apps/api/src/utils/: tokens.py
apps/api/tests/integration/: test_api.py
apps/api/tests/unit/: test_context_engineering.py  test_input_validation.py
apps/mobile/: .dockerignore  README.md  app.json  package.json
apps/web/: .dockerignore  .gitignore  Dockerfile  README.md  package-lock.json  package.json
apps/web/src/: middleware.ts
apps/web/src/lib/: api.ts  popup-data.ts  utils.ts
data/: popups.db
docs/: DEPLOYMENT_GUIDE.md  MOBILE_APP_IMPLEMENTATION_STATUS.md  NOTION_PROJECT_INTRO.md  SOLAR_AGENT_UPGRADE.md  agent_implementation_example.py  ai_agent_architecture_design.md
docs/prd/: PRD_ai-agent-context-memory.md  PRD_ai-agent-context-memory_ANALYSIS.md  PRD_mobile-app-deployment_ANALYSIS.md
docs/todo_plan/: PLAN_ai-agent-context-memory.md
frontend/: .env.example  next.config.ts  tailwind.config.ts  vercel.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/layout/: header.tsx
frontend/src/components/ui/: button.tsx  skeleton.tsx
frontend/src/contexts/: language-context.tsx
frontend/src/lib/supabase/: middleware.ts  server.ts
frontend/src/types/: index.ts
scripts/: geocode_popups.py  run_observer.py
src/agents/: business_agent.py  observer_agent.py
src/api/: main.py
src/api/middleware/: error_handler.py
src/api/routes/: chat.py
src/config/: settings.py
src/db/postgres/: summary_store.py
src/db/qdrant/: __init__.py  connection.py
src/db/sqlite/: __init__.py  popup_store.py
src/middleware/core/: circuit_breaker.py  input_validation.py  metadata.py  rate_limiter.py  summarization.py
src/models/: events.py  instagram.py
src/scraper/: __init__.py  instaloader_client.py  parser.py
src/services/llm/: upstage_client.py  vllm_client.py
src/services/memory/: embeddings.py  memory_store.py
src/tools/i18n/: __init__.py  translation.py
src/tools/instagram/: popup_search.py
src/tools/naver/: __init__.py  directions.py
src/tools/travel/: __init__.py  itinerary.py
src/utils/: distributed_lock.py
(+34 files in other folders)
