[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spotfinder"
version = "0.1.0"
description = "AI Agent that helps foreigners find travel hotspots and build travel schedules in Korea using Naver Map"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "AI Team", email = "ai-team@example.com" }
]
keywords = ["ai", "agent", "travel", "korea", "naver-map", "langchain", "langgraph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # LangGraph / LLM
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "openai>=1.0.0",

    # API Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "slowapi>=0.1.9",

    # Database
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    "redis>=5.0.0",

    # Vector DB & Embeddings
    "qdrant-client>=1.12.0",
    "sentence-transformers>=3.3.0",

    # Tokenizer
    "transformers>=4.40.0",

    # Observability
    "sentry-sdk[fastapi]>=2.0.0",
    "logtail-python>=0.3.0",
    "structlog>=24.0.0",
    "prometheus-client>=0.20.0",

    # Validation & Config
    "pydantic>=2.10.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",

    # HTTP Client (for Naver API)
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",

    # Language Detection
    "langdetect>=1.0.9",

    # Utilities
    "orjson>=3.9.0",
    "tenacity>=8.2.0",

    # Instagram Scraping
    "instaloader>=4.10.0",

    # Scheduler
    "apscheduler>=3.10.0",

    # SQLite async
    "aiosqlite>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[project.scripts]
spotfinder = "src.api.main:main"
observer = "scripts.run_observer:main"
scraper = "scripts.run_scraper:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
